# process-shepherd

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: copilot-instructions.md
src/: cpu_calculator.rs  display.rs  lib.rs  main.rs  process_info.rs  window_info.rs
